--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+# ────────────────────────────────────────
+# 외부 설정 파일 (민감 정보, Git 추적 제외 , 깡통 구글 계정)
+/src/main/resources/application.properties
