--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,15 @@ dependencies {
     // 메일 서비스 라이브러리 (Jakarta Mail + Jakarta Activation)
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+    // OpenPDF ( JAVA에서 PDF 파일 생성하는 라이브러리)
+    implementation 'com.github.librepdf:openpdf:1.3.30'
+
+    // Jakarta Bean Validation (DTO 단위에서 유효성 검사 실시하는 라이브러리)
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // Swagger OpenAPI ( Spring에서 API 문서를 자동 생성하는 라이브러리)
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
 }
 
 tasks.named('test') {
