--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/intelliLang.xml
 *.iws
 *.iml
 *.ipr
@@ -44,3 +45,5 @@ bin/
 # ────────────────────────────────────────
 # 외부 설정 파일 (민감 정보, Git 추적 제외 , 깡통 구글 계정)
 /src/main/resources/application.properties
+
+intelliLang
