--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,6 @@ bin/
 
 # ────────────────────────────────────────
 # 외부 설정 파일 (민감 정보, Git 추적 제외 , 깡통 구글 계정)
-*/application.properties
+application.properties
 
 intelliLang
