250903 취합 과정 그래프호퍼 문제 발생

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ bin/
 /src/main/resources/application.properties
 
 intelliLang
+
+# ────────────────────────────────────────
+# 외부 설정 파일 (민감 정보, Git 추적 제외 , 깡통 구글 계정)
+application.properties
