250903 - 취합한 거 풀, gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,4 @@ bin/
 
 # ────────────────────────────────────────
 # 외부 설정 파일 (민감 정보, Git 추적 제외 , 깡통 구글 계정)
-/src/main/resources/application.properties
-
-intelliLang
+application.properties
