--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     // GraphHopper (오픈소스 경로 탐색 & 거리/시간 계산 라이브러리)
     implementation 'com.graphhopper:graphhopper-core:9.0'
 
+    // Apache POI (마이크로소프트 오피스 InOut 처리 라이브러리)
+    implementation 'org.apache.poi:poi:5.4.1'
+    implementation 'org.apache.poi:poi-ooxml:5.4.1'
 }
 
 tasks.named('test') {
